add delete functionality

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
   <body>
     <div id="wrapper">
       <header>
         <div id="page-banner">
-          <h1 class="title"></h1>
+          <h1 class="title">Bookorama</h1>
           <p>Books for Dennis</p>
           <form action="" id="search-books">
             <input type="text" placeholder="Search books" />
@@ -20,26 +21,29 @@
         <h2 class="title">Books to Read</h2>
         <ul>
           <li>
-            <span class="name">Nsme of the wind</span>
+            <span class="name">Things fall apart</span>
             <span class="delete">Delete</span>
-            <span class="name">Nsme of the wind</span>
+          </li>
+          <li>
+            <span class="name">Who wants to be a millionnaair</span>
+            <span class="delete">Delete</span>
           </li>
           <li>
             <span class="name">Nsme of the wind</span>
             <span class="delete">Delete</span>
-            <span class="name">Nsme of the wind</span>
           </li>
           <li>
-            <span class="name">Nsme of the wind</span>
+            <span class="name">Obi is a boy</span>
             <span class="delete">Delete</span>
-            <span class="name">Nsme of the wind</span>
           </li>
         </ul>
       </div>
       <form action="" id="add-book">
-        <input type="text" placeholder="Add a book">
+        <input type="text" placeholder="Add a book" />
         <button>Add</button>
       </form>
     </div>
+
+    <script src="./main1.js"></script>
   </body>
 </html>
