add search filtering logic

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1 class="title">Bookorama</h1>
           <p>Books for Dennis</p>
           <form action="" id="search-books">
-            <input type="text" placeholder="Search books" />
+            <input id="search-input" type="text" placeholder="Search books" />
           </form>
         </div>
       </header>
@@ -37,9 +37,11 @@
             <span class="delete">Delete</span>
           </li>
         </ul>
+        <!-- <input type="checkbox">check me  -->
       </div>
+      
       <form action="" id="add-book">
-        <input type="text" placeholder="Add a book" />
+        <input id="book-input" type="text" placeholder="Add a book" />
         <button>Add</button>
       </form>
     </div>
